--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,43 @@
 body {
     background:black;
 }
-#post {
+.post {
     background:white;
-    width:45%;
-    display: center;
-    padding:8px;
+    width: 400px;
+    height:500px;
+    margin:0 auto;
 }
 header {
-    background:white;
-    flex-direction: left;
+    
+}
+.icon{
+    margin-left:95%;
+    margin-top: -10%;
+}
+img{
+    width:100%;
+    height:100%;
+    margin:0;
+    padding:0;
+}
+.body{
+    margin:0;
+    padding:0;
+}
+.fa-html5{
+    padding:20%;
+}
+.title{
+    padding:3%;
+}
+.fa-ellipsis-vertical{
+    margin-bottom:55%;
+}
+.footer{
+    padding-left:4px;
+    padding-right:4px;
+}
+.text{
+    padding-left:4px;
+    padding-right:4px;
 }
